# PythReceipt

./: .env.local  .gitignore  Anchor.toml  mock-websocket.js  next.config.js  package-lock.json  package.json  patch.js  run_solana.js  simple-patch.js  tailwind.config.ts  tsconfig.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/api/dispute/check/: route.ts
app/api/liquidate/: route.ts
app/api/pyth/: route.ts
app/api/receipt/: route.ts
app/dispute/: page.tsx
app/dispute/[txSig]/: page.tsx
app/receipt/[txSig]/: page.tsx
components/: DisputeChart.tsx  FairnessScore.tsx  WalletProvider.tsx
hooks/: usePythLazer.ts
lib/: anchor.ts  constants.ts  idl.json  postPriceUpdate.ts  pyth.ts  solana.ts
programs/liquidation_lens/: Cargo.toml
programs/liquidation_lens/src/: lib.rs
scripts/: airdrop.ts  liquidate.ts  liquidate_final.js
